# ci-tools

./: .gitignore  README.md  manage.ps1  pyproject.toml  temp_file_issues.json
.github/workflows/: changelog_milestone.yml  generate_changelog.yml  issue_to_clickup_ref.yml  milestone_release.yml  milestone_release_BE.yml  milestone_release_ref.yml  release_process_notes.yml  test_workflow.yml
scripts/: changelog.py  github_issues_to_clickup.py  github_org_activities_stats.py  github_prs_to_clickup.py  milestones.py  versioning.py
scripts/github_issues_management/: github_issues_to_clickup.py  pyproject.toml
scripts/github_org_activities/: github_org_activities_stats.py  manage.ps1  pyproject.toml
tools/: changelog.py  cli.py  environment.py  milestones.py  project_management.py  repository.py  utils.py  versioning.py
workflows/: generate_changelog.yml
