[tool.poetry]
name = "ci-tools-org-activities"
version = "0.1.0"
description = ""
authors = ["Jakub Jezek <jakubjezek001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
semver = "^2.13.0"
GitPython = "^3.1.30"
PyGithub = "^1.57"
python-dotenv = "^0.21.1"
click = "^8.1.3"
requests = "^2.28.2"
mistune = "^2.0.4"
tomlkit = "^0.11.6"
aiohttp = "^3.8.4"
numpy = "1.26.0"
scipy = "1.11.2"
scikit-learn = "1.3.1"
pytz = "^2023.3.post1"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
